--- a/index.html
+++ b/index.html
@@ -14,21 +14,23 @@
             <div class="imagen1"><img src="cats/00.jpg" />
             <a href="cats.html">
                 <div class="overlay">
-                    <p class="caption">imágenes de gatos</p> </div></a>
+                    <p class="caption">Imágenes de gatos divertidos </p> </div></a>
                 </div>
 
             <div class="imagen2"><img src="history/00.jpg" />
+            <a href="history.html">    
                 <div class="overlay">
-                    <p class="caption">Imagenes historicas a blanco y negro del siglo XX</p> </div>
+                    <p class="caption">Fotografías historicas a blanco y negro del siglo XX</p> </div></a>
             </div>
 
 
-            <div class="imagen3"><img src="WorldPressPhoto/00.jpg"  />
+            <div class="imagen3"><img src="WorldPressPhoto/00.png"  />
+            <a href="wpp.html"> 
                 <div class="overlay">
-                    <p class="caption">World Press Photo</p> </div>
+                    <p class="caption">World Press Photo. Foto de año 2017-2023</p> </div></a>
             </div>
 
-            <footer>Programacion Web 20232 Mateo Hoyos Mesa. Contacto: mateo.hoyos@udea.edu.co</footer>
+            <footer>Programacion Web 2023-2 Mateo Hoyos Mesa. Contacto: mateo.hoyos@udea.edu.co</footer>
           </main>
     </body>
 </html>
