--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Imagenes</title>
         <meta name="Mateo Hoyos" content="Programacion Web 2023-2" />
         <link rel="stylesheet" type="text/css" href="styles.css" />
+        <link rel="icon" href="icono.png" type="image/x-icon" /> 
     </head>
 
     <body>
