--- a/history.html
+++ b/history.html
@@ -21,7 +21,7 @@
             </nav>
 
             <div class="contenedor1">
-                <div class="imagen1"><img src="history/01.jpg"/></div>
+                <div class="imagen1"><img src="history/01.png"/></div>
                 <div class="imagen2"><img src="history/02.jpeg"/></div>
             </div>
 
