--- a/cats.html
+++ b/cats.html
@@ -32,7 +32,7 @@
 
             <div class="contenedor3">
                 <div class="imagen6"><img src="cats/06.jpg"/></div>
-                <div class="imagen7"><img src="cats/07.jpg"/></div>
+                <div class="imagen7"><img src="cats/07.png"/></div>
                 
             </div>
 
